@@ -34,12 +34,26 @@
     <property name="step-increment">1</property>
     <property name="page-increment">10</property>
   </object>
+  <object class="GtkAdjustment" id="adjustment_horizontal_padding">
+    <property name="lower">-1</property>
+    <property name="upper">100</property>
+    <property name="value">-1</property>
+    <property name="step-increment">1</property>
+    <property name="page-increment">10</property>
+  </object>
   <object class="GtkAdjustment" id="adjustment_plot_time">
     <property name="lower">1</property>
     <property name="upper">8.91</property>
     <property name="value">2</property>
     <property name="step-increment">1</property>
     <property name="page-increment">1</property>
+  </object>
+  <object class="GtkAdjustment" id="adjustment_vertical_padding">
+    <property name="lower">-1</property>
+    <property name="upper">100</property>
+    <property name="value">-1</property>
+    <property name="step-increment">1</property>
+    <property name="page-increment">10</property>
   </object>
   <object class="GtkAdjustment" id="preferences_update_exchange_rates_adjustment">
     <property name="lower">-1</property>
@@ -424,28 +438,17 @@ Note that only the mode, history and definitions of the last closed instance wil
                   </packing>
                 </child>
                 <child>
-                  <!-- n-columns=2 n-rows=2 -->
-                  <object class="GtkGrid">
+                  <!-- n-columns=2 n-rows=3 -->
+                  <object class="GtkGrid" id="grid_theme">
                     <property name="visible">True</property>
                     <property name="can-focus">False</property>
                     <property name="row-spacing">12</property>
                     <property name="column-spacing">12</property>
                     <child>
-                      <object class="GtkLabel" id="label_window_title">
-                        <property name="visible">True</property>
-                        <property name="can-focus">False</property>
-                        <property name="halign">start</property>
-                        <property name="label" translatable="yes">Window title</property>
-                      </object>
-                      <packing>
-                        <property name="left-attach">0</property>
-                        <property name="top-attach">1</property>
-                      </packing>
-                    </child>
-                    <child>
                       <object class="GtkComboBoxText" id="preferences_combo_title">
                         <property name="visible">True</property>
                         <property name="can-focus">False</property>
+                        <property name="hexpand">True</property>
                         <items>
                           <item translatable="yes">Application name</item>
                           <item translatable="yes">Result</item>
@@ -457,6 +460,18 @@ Note that only the mode, history and definitions of the last closed instance wil
                       </object>
                       <packing>
                         <property name="left-attach">1</property>
+                        <property name="top-attach">1</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <object class="GtkLabel" id="label_window_title">
+                        <property name="visible">True</property>
+                        <property name="can-focus">False</property>
+                        <property name="halign">start</property>
+                        <property name="label" translatable="yes">Window title</property>
+                      </object>
+                      <packing>
+                        <property name="left-attach">0</property>
                         <property name="top-attach">1</property>
                       </packing>
                     </child>
@@ -490,6 +505,94 @@ Note that only the mode, history and definitions of the last closed instance wil
                         <property name="top-attach">0</property>
                       </packing>
                     </child>
+                    <child>
+                      <object class="GtkLabel" id="label_pad">
+                        <property name="visible">True</property>
+                        <property name="can-focus">False</property>
+                        <property name="halign">start</property>
+                        <property name="label" translatable="yes">Button padding</property>
+                      </object>
+                      <packing>
+                        <property name="left-attach">0</property>
+                        <property name="top-attach">2</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <object class="GtkBox" id="box_pad2">
+                        <property name="visible">True</property>
+                        <property name="can-focus">False</property>
+                        <property name="hexpand">True</property>
+                        <property name="spacing">6</property>
+                        <child>
+                          <object class="GtkComboBoxText" id="preferences_horizontal_padding_combo">
+                            <property name="visible">True</property>
+                            <property name="can-focus">False</property>
+                            <property name="hexpand">True</property>
+                            <property name="active">0</property>
+                            <items>
+                              <item translatable="yes">Default</item>
+                              <item>0 px</item>
+                              <item>1 px</item>
+                              <item>2 px</item>
+                              <item>3 px</item>
+                              <item>4 px</item>
+                              <item>6 px</item>
+                              <item>8 px</item>
+                              <item>10 px</item>
+                              <item>12 px</item>
+                            </items>
+                            <signal name="changed" handler="on_preferences_horizontal_padding_combo_changed" swapped="no"/>
+                          </object>
+                          <packing>
+                            <property name="expand">False</property>
+                            <property name="fill">True</property>
+                            <property name="position">0</property>
+                          </packing>
+                        </child>
+                        <child>
+                          <object class="GtkLabel" id="label_pad2">
+                            <property name="visible">True</property>
+                            <property name="can-focus">False</property>
+                            <property name="label" translatable="yes">/</property>
+                          </object>
+                          <packing>
+                            <property name="expand">False</property>
+                            <property name="fill">True</property>
+                            <property name="position">1</property>
+                          </packing>
+                        </child>
+                        <child>
+                          <object class="GtkComboBoxText" id="preferences_vertical_padding_combo">
+                            <property name="visible">True</property>
+                            <property name="can-focus">False</property>
+                            <property name="hexpand">True</property>
+                            <property name="active">0</property>
+                            <items>
+                              <item translatable="yes">Default</item>
+                              <item>0 px</item>
+                              <item>1 px</item>
+                              <item>2 px</item>
+                              <item>3 px</item>
+                              <item>4 px</item>
+                              <item>5 px</item>
+                              <item>6 px</item>
+                              <item>7 px</item>
+                              <item>8 px</item>
+                            </items>
+                            <signal name="changed" handler="on_preferences_vertical_padding_combo_changed" swapped="no"/>
+                          </object>
+                          <packing>
+                            <property name="expand">False</property>
+                            <property name="fill">True</property>
+                            <property name="position">2</property>
+                          </packing>
+                        </child>
+                      </object>
+                      <packing>
+                        <property name="left-attach">1</property>
+                        <property name="top-attach">2</property>
+                      </packing>
+                    </child>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -498,7 +601,7 @@ Note that only the mode, history and definitions of the last closed instance wil
                   </packing>
                 </child>
                 <child>
-                  <object class="GtkBox" id="box_expression_lines">
+                  <object class="GtkBox">
                     <property name="visible">True</property>
                     <property name="can-focus">False</property>
                     <property name="spacing">12</property>
@@ -519,6 +622,7 @@ Note that only the mode, history and definitions of the last closed instance wil
                       <object class="GtkSpinButton" id="preferences_expression_lines_spin_button">
                         <property name="visible">True</property>
                         <property name="can-focus">True</property>
+                        <property name="hexpand">True</property>
                         <property name="text" translatable="yes">3</property>
                         <property name="adjustment">adjustment_expression_lines</property>
                         <property name="snap-to-ticks">True</property>
@@ -527,7 +631,7 @@ Note that only the mode, history and definitions of the last closed instance wil
                         <signal name="value-changed" handler="on_preferences_expression_lines_spin_button_value_changed" swapped="no"/>
                       </object>
                       <packing>
-                        <property name="expand">True</property>
+                        <property name="expand">False</property>
                         <property name="fill">True</property>
                         <property name="position">1</property>
                       </packing>
@@ -536,7 +640,7 @@ Note that only the mode, history and definitions of the last closed instance wil
                   <packing>
                     <property name="expand">False</property>
                     <property name="fill">True</property>
-                    <property name="position">7</property>
+                    <property name="position">6</property>
                   </packing>
                 </child>
                 <child>
