@@ -1,3 +1,7 @@
+2021-04-24 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Add customizable button padding (and decrease horizontal padding to 6 by default on Windows)
+
 2021-04-19 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* Replace dark theme check box with combo box (with high contrast and default theme options added)
